--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.3",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
