--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-vue": "^3.0.0",
     "nuxt": "^3.10.1",
+    "nuxt-storage": "^1.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.1.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.6",
@@ -55,6 +57,7 @@
     "typescript": "~5.2.0",
     "vite": "^5.0.5",
     "vitest": "^1.0.1",
-    "vue-tsc": "^1.8.25"
+    "vue-i18n": "^9.9.1",
+    "vue-tsc": "^1.8.27"
   }
 }
