--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     }
   ],
   "compilerOptions": {
-    "module": "NodeNext"
-  }
+    "module": "es2015"
+  },
+  "extends": "./.nuxt/tsconfig.json"
 }
